--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,16 @@ html {
 body {
   max-width: 320px;
   margin: auto;
+  background: black;
+}
+
+header {
+  background-image: url(file:///Users/enoducotterd/Sites/14-techmag/14-techmag-ressources/web/code.jpg);
+  background: black;
+  border: 2px solid white;
+  color: grey;
+}
+
+header h1 {
+  font-family: 'Montserrat', sans-serif;
 }
