--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,12 @@ header {
 }
 
 header h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif; 
   color: white;
+}
+
+header span {
+  color: #33ff99;
 }
 
 header p {
