--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 body {
   max-width: 320px;
   margin: auto;
-  background: ;
+  background: black;
   font-family: 'Open Sans', sans-serif;
 }
 
