--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,10 @@ article {
   background-color: white;
 }
 
+article figure {
+  box-shadow: 8px 5px 5px;
+}
+
 header p {
   color: #cccccc;
 }
@@ -59,4 +63,13 @@ header p {
 footer {
   color: white;
   border: 2px solid #33ff99;
+  text-align: center;
+}
+
+.more-content {
+  color: white;
+  background-color: black;
+  font-family: 'Open Sans', sans-serif;
+  text-decoration: none;
+  font-weight: bold;
 }
