--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,13 @@ h1 {
 
 article {
   background-color: white;
+  padding: 30px;
 }
 
 article figure {
   box-shadow: 8px 5px 5px;
+  width: 100%;
+  margin: auto;
 }
 
 header p {
@@ -72,4 +75,5 @@ footer {
   font-family: 'Open Sans', sans-serif;
   text-decoration: none;
   font-weight: bold;
+  padding: 8 15;
 }
