translation of classes

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   color: #33ff99;
 }
 
-.chapeau {
+.hat {
   padding: 30px;
 }
 
@@ -86,7 +86,7 @@ header p {
   color: black;
 }
 
-.issue {
+.publisht {
   font-size: small;
 }
 
