--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h1 {
 
 article {
   background-color: white;
-  padding: 30px;
+  padding: 30px 29px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
