--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ footer {
 }
 
 .more-content {
-  background-color: black;
+  background-color: #444444;
   padding: 8px 15px;
   margin-top: 22px;
 }
