--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   border: 2px solid white;
   color: grey;
   padding: 25px 30px;
-  margin-bottom: 20px;
+  margin:20px 0px;
 }
 
 .site-header em {
